--- a/Ville/css/style.css
+++ b/Ville/css/style.css
@@ -48,7 +48,7 @@ main {
     width: 100%;
 }
 
-#start > button {
+#start button {
     width: 94%;
     margin: 1rem;
     box-sizing: content-box;
