--- a/Ville/css/style.css
+++ b/Ville/css/style.css
@@ -114,7 +114,8 @@ footer {
 
 .lb-item {
     display: flex;
-    padding: 0 1rem 1rem 1rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    border-top: 3px dashed black;
 }
 
 .lb-left {
